# TransparentWallet

./: .gitignore  AGENTS.md  README.md  pubspec.yaml  run_codex_with_spec_kit.sh
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
android/app/: build.gradle.kts
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/src/: rx_helper.dart
lib/src/rust/: frb_generated.dart
lib/src/utils/: bridge_helper.dart  device_secret.dart  logger.dart
lib/src/widgets/: cold_wallet_demo_page.dart  hot_wallet_demo_page.dart  intro_page.dart  my_app.dart  pin_gate.dart  settings_page.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/src/: lib.rs  rx_helper.rs
rust/src/api/: app.rs  app_mode.rs  app_settings.rs  context.rs  localization.rs  logger.rs  mod.rs  pin.rs  simple.rs
rust/src/api_utils/: mod.rs  never.rs
rust/src/managers/: db.rs  mod.rs
rust/src/managers/app_settings/: entities.rs  manager.rs  mod.rs  repository.rs
rust/src/utils/: bridge_helper.rs  logger.rs  never.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_transparent_wallet.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_transparent_wallet.podspec
rust_builder/windows/: CMakeLists.txt
rust_secret/: Cargo.toml
rust_secret/src/: asymmetric.rs  lib.rs  nonce.rs  pin_key.rs  secret_context.rs  symmetric.rs
rust_wallet/: Cargo.toml
rust_wallet/locales/en/: main.ftl
rust_wallet/locales/zh/: main.ftl
rust_wallet/src/: app.rs  error.rs  lib.rs  logger.rs
rust_wallet/src/managers/: db.rs  mod.rs
rust_wallet/src/managers/app_mode/: entities.rs  manager.rs  repository.rs
rust_wallet/src/managers/app_settings/: entities.rs  manager.rs  repository.rs
rust_wallet/src/managers/localization/: entities.rs  manager.rs  mod.rs  repository.rs
rust_wallet/src/managers/pin/: entities.rs  manager.rs  mod.rs
specs/001-welcome-mode-choice/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-welcome-mode-choice/checklists/: requirements.md
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+7 files in other folders)
