[package]
name = "rust_lib_transparent_wallet"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
log = "0.4.28"
anyhow = "1.0.100"
futures = "0.3.31"
tokio = { version = "1.48.0", features = ["full"] }
rx-rust = { version = "0.2.1", features = ["tokio-scheduler"] }
flutter_rust_bridge = "=2.11.1"
sea-orm = { version = "2.0.0-rc.19", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros", "schema-sync", "entity-registry", "debug-print" ] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
