[package]
name = "rust_lib_transparent_wallet"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.100"
tokio = { version = "1.48.0", features = ["full"] }
rx-rust = { version = "0.2.1", features = ["tokio-scheduler"] }
rust_wallet = { path = "../rust_wallet", version = "0.1.0" }
flutter_rust_bridge = "=2.11.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
